Sat Dec 28 12:33:05 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* TODO:
	- update
	* include/tds.h:
	- update doc
	* src/ctlib/ct.c:
	- fix crash with CS_SEND_DATA_MSG
	* src/ctlib/unittests/t0009.c:
	- improve

Thu Dec 26 17:48:41 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: add small troubeshooting section
	* include/tds.h src/tds/token.c:
	- define some new token, ignore ORDERBY2 token

Wed Dec 25 12:19:06 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/pool/stream.c src/server/server.c:
	* src/tds/login.c src/tds/query.c src/tds/token.c:
	- renamed some token according to Sybase doc

Sun Dec 22 15:08:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/pool/stream.c src/server/server.c:
	* src/tds/token.c:
	- rename TDS_COL_INFO_TOKEN to TDS_COLFMT_TOKEN
	- added TDS_TABNAME_TOKEN and TDS_COLINFO_TOKEN and skip 
	  them (so FOR BROWSE query work)

Sun Dec 22 12:32:17 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am configure.in win32/Makefile.am (added):
	* win32/msvc6/Makefile.am (added):
	- add win32 project to distribution

Sat Dec 21 15:08:08 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: updated a bit

Fri Dec 20 22:51:40 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c src/ctlib/cs.c src/dblib/dblib.c:
	- use %I instead of %l for strftime (portability problem)

Fri Dec 20 22:43:18 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: 
	- do not use uninitialized variables
	- tested input params with a PA-RISC (big endian)

Fri Dec 20 22:30:57 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: fix big endian and numeric on TDS7

Fri Dec 20 22:06:42 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 src/tds/threadsafe.c:
	- fix error in HP/UX 10.20 (tds_get_homedir did not work)

Fri Dec 20 11:07:24 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>